--- a/src/components/GolfDetailsCard/GolfDetailsCard.css
+++ b/src/components/GolfDetailsCard/GolfDetailsCard.css
@@ -1,5 +1,4 @@
 
-
 .golf-details-cards-container {
     max-width: 400px;
     width: 100%;
@@ -39,5 +38,7 @@
     .golf-details-cards-container {
         max-width: 100vw;
         border-radius: 0;
+
+        padding: 24px 16px;
     }
 }
